# go-bzlmod-ast

./: .gitignore  .golangci.toml  CHANGELOG.md  Justfile  README.md  bcr_test.go  bridge.go  go.mod  handler.go  handler_test.go  parser.go  parser_test.go  realworld_test.go  spec.go  spec_test.go  tools.go.mod  tools.go.sum  types.go  use_extension_variable_test.go
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
buildutil/: attr.go  attr_test.go
label/: doc.go  module.go  module_test.go  version.go  version_test.go
testdata/: rules_go.MODULE.bazel  rules_js.MODULE.bazel  rules_python.MODULE.bazel
tools/: README.md  install-just.sh  install-shellcheck.sh
tools/vendor-parser/: main.go
tools/vendor-parser/templates/: README.md.tmpl
